--- a/invenso/index.html
+++ b/invenso/index.html
@@ -3,7 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
     <title>INVENSO</title>
+    <style>
+      body {
+          font-family: 'Poppins';font-size: 22px;
+      }
+      </style>
   </head>
   <body>
     <div id="root"></div>
